20_objects/25_network/30_ingress/14_svc3/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc3-deployment
  labels:
    app: nginx-ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress-demo
  template:
    metadata:
      labels:
        app: nginx-ingress-demo
    spec:
      containers:
        - name: ct-go-server
          image: nginx-ingress-demo-svc3:0.1  # Replace with your image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc3-cluster-ip
spec:
  selector:
    app: nginx-ingress-demo
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc3-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - svc3.xxx.com
      secretName: secret-tls-svc3
  rules:
    - host: svc3.xxx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc3-cluster-ip
                port: 
                  number: 8888
